--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -1,1 +1,32 @@
-Coucou c'est l'index !
+<header>
+  <h1><%= t('.titre') %></h1>
+  <p>Reboiser</p>
+</header>
+
+<div class="feature, text-center">
+  <h2>Respirer</h2>
+  <p>De l'oxygène, <strong>fabriqué naturellement</strong> par les arbres</p>
+  <%= image_tag("energy_300x300.png") %>
+</div>
+
+<div class="feature, text-center">
+  <h2>Participer</h2>
+  <p>Aider à la plantation, <strong>une mission</strong> humaine</p>
+  <%= image_tag("linux.png") %>
+</div>
+
+<div class="feature, text-center">
+  <h2>Héritage</h2>
+  <p>Réparer <strong>la couche d'ozone</strong> pour nos enfants</p>
+  <%= image_tag("icon_6693_300x300.png")%>
+</div>
+
+<div id="my-footer">
+  <p>Pour donner des nouvelles remplissez le formulaire!</p>
+  <ul class ="text-center, list-inline">
+    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+  </ul>
+</div>
