--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -6,19 +6,19 @@
 <div class="feature, text-center">
   <h2>Respirer</h2>
   <p>De l'oxygène, <strong>fabriqué naturellement</strong> par les arbres</p>
-  <%= asset_path("energy_300x300.png") %>
+  <%= image_tag("energy_300x300.png") %>
 </div>
 
 <div class="feature, text-center">
   <h2>Participer</h2>
   <p>Aider à la plantation, <strong>une mission</strong> humaine</p>
-  <%= asset_path("linux.png") %>
+  <%= image_tag("linux.png") %>
 </div>
 
 <div class="feature, text-center">
   <h2>Héritage</h2>
   <p>Réparer <strong>la couche d'ozone</strong> pour nos enfants</p>
-  <%= asset_path("icon_6693_300x300.png")%>
+  <%= image_tag("icon_6693_300x300.png")%>
 </div>
 
 <div id="my-footer">
