Ajout tableau index ajout edit rapport suppression modèle Form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,15 @@
 
 <body class="container">
 
-<ul class="nav nav-tabs" style="margin-bottom: 15px;">
 
 <div class="navbar navbar-inverse">
     <div class="navbar-header">
         <a class="navbar-brand" href="/">A4All</a>
     </div>
-    <div class="navbar-collapse collapse navbar-inverse-collapse">
+    <div class="navbar-collapse">
         <ul class="nav navbar-nav">
             <li><a href="/reports">Rapports</a></li>
+            <li><a href="/reports/new">Nouveau rapport</a></li>
         </ul>
     </div>
 </div>    
