--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,26 +1,26 @@
-<ul>
-	<% @reports.each do |item| %>
-	<li><%= item.user_name %></li>
-	<% end %>
-</ul>
+<h2>Liste des rapports</h2>
 
-<br>
-<h2>Nouvelle entrée</h2>
-
-<%= form_for @report do |r| %>
-
-  <%= r.label :user_name, 'Nom de l\'utilisateur'%><br>
-  <%= r.text_field :user_name %><br>
-
-  
-  <%= r.label :forest_name, 'Nom de la forêt' %><br>
-  <%= r.text_field :forest_name %><br>
-
-
-  <%= r.label :observation, 'Rapport'%><br>
-  <%= r.text_area :observation %><br>
-
-  <%= r.submit 'Envoyer' %>
- 
-<% end %>
-
+<table class="table table-hover table-bordered">
+  <thead>
+    <tr>
+      <th>Utilisateur</th>
+      <th>Nom forêt</th>
+      <th>Commentaire</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @reports.each do |report| %>
+    <tr>
+      <td><%= report.user_name %></td>
+      <td><%= report.forest_name %></td>
+      <td><%= report.observation %></td>
+      <td>
+        <%= link_to('Modifier', edit_report_path(report), class: 'btn btn-success btn-xs') %>
+        <%= link_to('Supprimer', report_path(report), method: :delete, class: 'btn btn-danger btn-xs') %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to('Ajouter un questionnaire', new_report_path, class: 'btn btn-primary pull-right') %>
