--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -17,7 +17,7 @@
       <td><%= report.observation %></td>
       <td>
         <%= link_to('Modifier', edit_report_path(report), class: 'btn btn-success btn-xs') %>
-        <%= link_to('Supprimer', report_path(report), method: :delete, class: 'btn btn-danger btn-xs') %>
+        <%= link_to('Supprimer', report_path(report), method: :delete, class: 'btn btn-danger btn-xs', data: { confirm: 'Sûr ?' }) %>
       </td>
     </tr>
     <% end %>
